<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".act.EditAdsAct">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_ads_linear_layout_margin"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/edit_ads_card_view_corner_radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpImages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.viewpager2.widget.ViewPager2>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edit_images_btn_selector"
                        android:onClick="onClickGetImages"
                        android:padding="@dimen/edit_ads_edit_image_btn_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/vpImages"
                        app:srcCompat="@drawable/ic_edit_images" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/card_view_country_margin_top"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/edit_ads_card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_country_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/country"
                        android:textColor="@color/main_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/select_country"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/title_city_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/city"
                        android:textColor="@color/main_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/title_tel_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/tel"
                        android:textColor="@color/main_color"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/title_tel_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/tel"
                        android:inputType="number" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />

                    <CheckBox
                        android:id="@+id/with_send_checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/with_send" />

                     <LinearLayout
                        android:id="@+id/divider03"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/card_view_country_margin_top"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/edit_ads_card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_cat_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textColor="@color/main_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_cat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCat"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />


                    <TextView
                        android:id="@+id/title_price_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/price"
                        android:textColor="@color/main_color"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/title_price_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/price_hint"
                        android:inputType="number" />

                    <LinearLayout
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />

                    <EditText
                        android:id="@+id/title_desc_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/enter_description" />

                    <TextView
                        android:id="@+id/title_desc_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        android:textColor="@color/main_color"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/main_color"
                        android:orientation="horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/publish_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/main_color"
                android:onClick="onClickPublish"
                android:text="@string/publish"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>